Fix form spacing

--- a/styles.css
+++ b/styles.css
@@ -182,7 +182,7 @@ button:active {
     padding-left: 5%;
     padding-right: 5px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1.5fr;
   }
 
   legend {
